Update Jupyter notebooks for v1.2

--- a/jupyter-notebooks/09-classes-friends-and-polymorphism.ipynb
+++ b/jupyter-notebooks/09-classes-friends-and-polymorphism.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0086e081",
+   "id": "1e9e9430",
    "metadata": {},
    "source": [
     "# Classes, Friends and Polymorphism\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b393b746",
+   "id": "e6e2a548",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +37,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ce8952",
+   "id": "75d60705",
    "metadata": {},
    "source": [
-    "This `Person` class (here defined with `class` as opposed to the `struct` keyword we met in Chapter 6) contains three members: `dob` (itself a user-defined type), `familyname` and `firstname` (both of which are `std::string`s). We can define a variable of type `Person` (here `a_person`) using default-initialization syntax (the braces are in fact optional) but we cannot do a lot else with this object. Its fields will be zero-initialized for `a_person.dob.year`, `a_person.dob.month`, and `a_person.dob.day`, while `a_person.familyname` and `a_person.firstname` are empty strings. This is becuase the access specifier `private:` (which we also met in Chapter 6) is always implied for `class`es. This means we cannot either access the fields (member variables) directly using dot-notation, or use uniform initialization syntax, as with `genius`.\n",
+    "This `Person` class (here defined with `class` as opposed to the `struct` keyword we met in Chapter 6) contains three members: `dob` (itself of a user-defined type called `Date`), `familyname` and `firstname` (both of which are `std::string`s). We can define a variable of type `Person` (here `a_person`) using default-initialization syntax (the braces shown here are in fact optional, while empty parentheses are **not** permitted) but we cannot do a lot else with this object. Its fields will be zero-initialized for `a_person.dob.year`, `a_person.dob.month`, and `a_person.dob.day`, while `a_person.familyname` and `a_person.firstname` are empty strings. This is becuase the access specifier `private:` (which we also met in Chapter 6) is always implied for `class`es. This means we cannot either access the fields (member variables) directly using dot-notation, or use uniform initialization syntax, as with `genius`.\n",
     "\n",
     "**Experiment:**\n",
     "\n",
-    "* Change the above fragment to use `struct` instead of `class` in order to enable compilation, and also an empty `main()` function. Does the program run?\n",
+    "* Change the above fragment to use `struct` instead of `class` in order to enable compilation, and also write an empty `main()` function. Does the program run? Is it therefore self-contained?\n",
     "\n",
     "* Now try to create `genius` within `main()` using assignment to member variables and uniform initialization. What error messages do you get? Does changing the keyword `class` to `struct` fix this problem in both cases?\n",
     "\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c8bb2c7",
+   "id": "d37195e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b657d002",
+   "id": "847e8aae",
    "metadata": {},
    "source": [
     "Quite a few things to note about this program:\n",
@@ -97,23 +97,23 @@
     "\n",
     "* The constructor's parameters have names `dob`, `familyname` and `firstname`, these being the same names as for the member variables (this is allowed in Modern C++). The conventions for naming (`private:`) class members vary, historically a trailing underscore is used, but this can become difficult to read.\n",
     "\n",
-    "* The member variables are initialized using uniform initialization syntax; this forbids narrowing conversions, and there shouldn't be any as the parameter types should have been carefully chosen. (Older code may use parentheses here instead of braces.) The order of construction is the same as the way the member fields are laid out (after the `private:` access specifier); the order in the comma-separated initializers is unimportant (although you should try to replicate the order of the member fields, your compiler will warn if they differ). The constructor's body is empty here (although it must be present), and this is not unusual.\n",
+    "* The member variables are initialized using uniform initialization syntax; this forbids narrowing conversions, and there shouldn't be any as the parameter types should have been carefully chosen. (Older code may use parentheses here instead of braces.) The order of construction is the same as the way the member fields are laid out (in this class they are all after the `private:` access specifier); the order in the comma-separated initializers is unimportant (although you should try to replicate the order of the member fields, and your compiler will warn if they differ). The constructor's body is empty here (although it must be present), and this is not unusual.\n",
     "\n",
     "* The `std::chrono::year_month_day` parameter (itself initialized by uniform initialization) is passed as `const`-reference instead of by value, as it is probably too big to fit in a single register to pass by value. The names are passed by value as `std::string_view` although in older code `const std::string&` would be common.\n",
     "\n",
     "* The member function `getName()` is declared `const` as it is guaranteed not to change any member variables. It returns a newly created `std::string` which must be returned by value.\n",
     "\n",
-    "* The member variable `dob` is declared `const` as it will never need to be changed; of course it needs to be initialized by the constructor, and this case is allowed. The member variables `familyname` and `firstname` need to be of type `std::string` (not `std::string_view` as for the constructor's parameters) for them to be guaranteed to exist for the lifetime of the class.\n",
+    "* The member variable `dob` is declared `const` as it will never need to be changed; of course it needs to be initialized by the constructor, and this case is allowed. The member variables `familyname` and `firstname` need to be of type `std::string` (not `std::string_view` as for the constructor's parameters) for them to be guaranteed to exist for the lifetime of the class (consider factory functions which return a newly-constructed object, as we saw in Chapter 8).\n",
     "\n",
     "* The member function `getDob()` is also declared `const` and returns a `const`-reference. It is possible to put this return value directly to a `std::ostream` as the Standard Library overloads `operator<<` for `std::chrono::year_month_day`.\n",
     "\n",
     "**Experiment:**\n",
     "\n",
-    "* Add more `Person` variables to `main()`, and output their names.\n",
+    "* Add more `Person` objects to `main()`, and output their names.\n",
     "\n",
     "* Rewrite the constructor to initialize the member variables in the body, instead of using the comma-separated list of member initializers.\n",
     "\n",
-    "* Modify this program to use `std::println()` instead of `cout`.\n",
+    "* Modify this program to use `std::println()` instead of `cout`. Perform most of the formatting in a `const` member function `toString()`, which returns a `std::string`.\n",
     "\n",
     "* Write getters (all declared `const`) called `getFamilyName()` and `getFirstName()` avoiding creation of unnecessary temporary variables. Modify `main()` to use these.\n",
     "\n",
@@ -121,7 +121,7 @@
     "\n",
     "* Modify the original constructor to allow for `firstname` not being present. Hint: use a defaulted function parameter. What other function needs to be changed?\n",
     "\n",
-    "* Try to create a default-constructed `Person`. What do you find?\n",
+    "* Try to create a default-constructed `Person`. What do you find? Now try to create a `public:` default constructor (with an empty parameter list).\n",
     "\n",
     "There is a third type of access specifier called `protected:`. Its meaning is the same as for `private:` except when inheritance is in use, when it means that (member functions defined within) derived classes have access to any members in the base class which were declared `protected:`. It's rare to find this in real code, although the next program we shall look at demonstrates its syntax and use.\n",
     "\n",
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94e00c7f",
+   "id": "ad397213",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
     "\n",
     "    auto [ id, salary ] = genius_employee.getDetails();\n",
     "    cout << \"ID: \" << id << \", Salary: $\" << salary << '\\n';\n",
-    "    year_month_day next_bday{ 2023y, March, 14d };\n",
+    "    year_month_day next_bday{ 2024y, March, 14d };\n",
     "    if (genius_employee.isBirthdayToday(next_bday)) {\n",
     "        cout << \"Happy Birthday!\\n\";\n",
     "    }\n",
@@ -226,16 +226,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71d19458",
+   "id": "ba92d6c6",
    "metadata": {},
    "source": [
     "Many things to note about this program:\n",
     "\n",
     "* A second constructor for `Person` taking only a `std::chrono::year_month_day` has been added. Setters can be used later to initialize or modify the other three member variables, which are left defaulted by this constructor (empty for the two `std::string`s and `false` for the `bool`).\n",
     "\n",
-    "* A `virtual` destructor has been added to `Person`; if you remember one thing about inheritance, it should be that base classes need a virtual destructor. This is so that any heap objects of type `Student` or `Employee` assigned to a pointer of type `Person*` (including use of smart pointers), the correct destructor of the **derived** class can be found and thus called, avoiding memory leaks.\n",
+    "* A `virtual` destructor has been added to `Person`; a key C++ concept is that base classes often need a virtual destructor. This is so that any heap objects of type `Student` or `Employee` assigned to a pointer of type `Person*` (including use of smart pointers), the correct destructor of the **derived** class can be found and thus called, avoiding memory leaks.\n",
     "\n",
-    "* The `getName()` function returns the name(s) provided by either the constructor or the setter(s) as a single `std::string`, ordered according to the member variable `familynamefirst`. (I hope this attempt at cultural inclusion doesn't offend anyone!)\n",
+    "* The `getName()` function returns the name(s) provided by either the constructor or the setter(s) as a single `std::string`, ordered according to the member variable `familynamefirst`. (Hopefully this attempt at cultural inclusion doesn't offend anyone!)\n",
     "\n",
     "* The member variable `dob` is declared `protected:`, the other three are `private:`, as before.\n",
     "\n",
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "482bd423",
+   "id": "5054e4cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "640e5af1",
+   "id": "1d00f192",
    "metadata": {},
    "source": [
     "**Experiment:**\n",
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a47425a",
+   "id": "186fde34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc249b3e",
+   "id": "fe592def",
    "metadata": {},
    "source": [
     "Alternatively, global `operator==` can be overloaded for `Person`, as demonstrated here:"
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37bcdf73",
+   "id": "d2ad794f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc72da0d",
+   "id": "d7ebc231",
    "metadata": {},
    "source": [
     "Defining either one of these variants of `operator==` is sufficient to make the following code compile:"
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ced260cd",
+   "id": "15aa05b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d51141e9",
+   "id": "ded6dab8",
    "metadata": {},
    "source": [
     "A couple of things to note:\n",
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "142b12ad",
+   "id": "7483a6db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,13 +473,13 @@
     "    else {\n",
     "        cout << \"the same age as \";\n",
     "    }\n",
-    "    cout << \"person2\" << '\\n';\n",
+    "    cout \" person2\\n\";\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7d7a0d7a",
+   "id": "08fdf66d",
    "metadata": {},
    "source": [
     "Some things to note about this program:\n",
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3117319c",
+   "id": "07a3077d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada10c79",
+   "id": "79c07aaa",
    "metadata": {},
    "source": [
     "A few things to note about this program:\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e64f74f1",
+   "id": "b2defe26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,18 +597,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1794657",
+   "id": "ae447743",
    "metadata": {},
    "source": [
     "The meanings implied for these member functions in the context of the `virtual` keyword are as follows:\n",
     "\n",
     "* `f()` is a function in a base class or derived class which can (optionally) be redefined (in the derived class).\n",
     "\n",
-    "* `g()` is a *pure-virtual* function of an abstract base class, which is **never** defined in this class and **must** be defined in a class that derives from it, in order for objects of the derived class to able to be created. Objects of an abstract class **cannot** be instantiated; attempting to do so would trigger a compile-time error.\n",
+    "* `g()` is a *pure-virtual* function of an abstract base class, which is not usually defined in this class and **must** be defined in a class that derives from it, in order for objects of the derived class to able to be created. Objects of an abstract class **cannot** be instantiated; attempting to do so would trigger a compile-time error.\n",
     "\n",
     "* `h()` is a function in a derived class which redefines (overrides) a previous definition; the function signature must exactly match that in the base class (including `const` and `noexcept` qualifiers). This function **can** itself be redefined in any subsequently derived class.\n",
     "\n",
-    "* `k()` is the same as `h()` except this function **cannot** be redefined in a subsequently derived class.\n",
+    "* `k()` is the same as `h()` except this function **cannot** again be redefined in a subsequently derived class.\n",
     "\n",
     "The following program demonstrates all of these uses in a more complex hierarchy deriving from an abstract `Shape` class:"
    ]
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daa18aea",
+   "id": "ee8b8d6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0c3d7eb",
+   "id": "fbc28d94",
    "metadata": {},
    "source": [
     "A lot of things to note about this program:\n",
@@ -765,15 +765,18 @@
     "\n",
     "[^1]: Grady Booch, Robert A. Maksimchuk, Michael W. Engle, Bobbi J. Young, Jim Conallen, Kelli A. Houston *Object-Oriented Analysis and Design with Applications* (3rd ed. Pearson, 2007, ISBN-13: 9780201895513)\n",
     "\n",
-    "*All text and program code &copy;2019-2024 Richard Spencer, all rights reserved.*"
+    "*All text and program code &copy;2019-2025 Richard Spencer, all rights reserved.*"
    ]
   }
  ],
  "metadata": {
   "jupytext": {
-   "cell_metadata_filter": "-all",
-   "main_language": "python",
-   "notebook_metadata_filter": "-all"
+   "cell_metadata_filter": "-all"
+  },
+  "kernelspec": {
+   "display_name": "C++ 23",
+   "language": "c++",
+   "name": "cpp23"
   }
  },
  "nbformat": 4,
