--- a/jupyter-notebooks/10-templates-exceptions-lambdas-smart-pointers.ipynb
+++ b/jupyter-notebooks/10-templates-exceptions-lambdas-smart-pointers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e85ad41",
+   "id": "b1fedb81",
    "metadata": {},
    "source": [
     "# Templates, Exceptions, Lambdas, Smart Pointers\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aee60110",
+   "id": "a6ceb620",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c910218e",
+   "id": "affb1250",
    "metadata": {},
    "source": [
     "What is not necessarily apparent is that the Standard Library does not actually contain a *specialization* of `vector` for the element type `double`. The code required for the *instance* `std::vector<double>` is generated automatically by the compiler, and this code is then compiled. Whilst it is true that the type parameter is optional in some circumstances, it must still be able to be deduced somehow at compile-time in order for the *template* (the code for generic `std::vector`) to be *instantiated* (turned into compilable code) and then itself compiled:"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05422267",
+   "id": "c3830ec0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f36a6b9",
+   "id": "131470ee",
    "metadata": {},
    "source": [
     "Note that the types of all the elements in the `std::initializer_list` used to create `vi` must be the same, so that this type can be deduced unambiguously.\n",
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4aeedb7",
+   "id": "dc1dbf2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb4c50d3",
+   "id": "32250a3d",
    "metadata": {},
    "source": [
     "We can overload this function for `int`s without violating the ODR:"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8c1c50f",
+   "id": "6c69d572",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d2bef26",
+   "id": "aa1ce9d4",
    "metadata": {},
    "source": [
     "Notice that if we call `average()` with two `double`s, the return type is `double`. If we call it with two `int`s, the return type is `int`, possibly leading to rounding:"
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e60a3ad6",
+   "id": "3005cc96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6e7e06b",
+   "id": "5f946f3b",
    "metadata": {},
    "source": [
     "This can become unwieldy if averages of many different types are required (a new function needs to be written out for each one), and is inflexible (there is no way to specify the return type; this is not part of the function signature and so cannot be used to select which overloaded function is to be called).\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbc29f14",
+   "id": "05c18533",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5955f215",
+   "id": "d4e15044",
    "metadata": {},
    "source": [
     "A couple of things to note about this syntax:\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3630b07",
+   "id": "95c5200c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ccd4a36",
+   "id": "094288b2",
    "metadata": {},
    "source": [
     "Notice that triangular brackets are **always** necessary when dereferencing template variables (which may be empty if a default type is specified as it is here), however explicit narrowing casts are not needed. The specializations `pi<float>` and `pi<double>` are useful where automatic promotion of the floating-point type in an expression is not desired.\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab13d812",
+   "id": "787c4a25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,12 +188,13 @@
     "\n",
     "auto m1 = minimum(3, 2.5);        // Error! minimum<int> or minimum<double>?\n",
     "auto m2 = minimum(-2, 1);         // m2 is an int with value -2\n",
-    "auto m3 = minimum(-5.5, -6.5);    // m3 is a double with value -6.5"
+    "auto m3 = minimum(-5.5, -6.5);    // m3 is a double with value -6.5\n",
+    "auto m4 = minimum<double>(3.0, 4) // m4 is a double with value 3"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f17e08d5",
+   "id": "d0d2cd62",
    "metadata": {},
    "source": [
     "Notice that we do not have to specify a type for `T` explicitly unless the deduction from the supplied arguments would be ambiguous (which is the case if the types of the two function arguments are different).\n",
@@ -204,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13944d5f",
+   "id": "d452588c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,12 +242,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79b3fb4a",
+   "id": "0c275758",
    "metadata": {},
    "source": [
     "Some things to note about this program:\n",
     "\n",
-    "* A default type for `T` is required as we make use of a defaulted default-constructor; `char` was chosen as the smallest type (`void` may be in theory preferrable, but cannot be used as the compiler would encounter the construct `void value` when instatiating the class and produce an error).\n",
+    "* A default type for `T` is required as we make use of a defaulted default-constructor; `char` was chosen as the smallest type (`void` may be in theory preferrable, but cannot be used as the compiler would encounter the construct `void value` when instantiating the class and produce an error).\n",
     "\n",
     "* The other constructor matches `T` from the type of `value`, storing this in the member variable `value`, and also sets `valid` to `true`.\n",
     "\n",
@@ -262,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "689d6a78",
+   "id": "c844e12c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,14 +284,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eafeea1",
+   "id": "444680b4",
    "metadata": {},
    "source": [
-    "Notice that the constructor (only) is defined with both `template` and `explicit`, meaning a new contructor is (attempted to be) generated when called with different types, and takes an r-value reference `T&&`. A function taking an r-value reference promises not to modify it; it can also be safely used with temporaries (such as `\"Hello\"s + \" World\"`) and is efficient as the temporary is not copied. (An optimization to use `std::move` when called with a `std::string` (only) r-value is a possiblilty here, however this would entail writing a second `explicit` constructor.)\n",
+    "Notice that the constructor (only) is defined with both `template` and `explicit`, meaning a new constructor is (attempted to be) generated when called with different types, and takes an r-value reference `T&&`. A function taking an r-value reference promises not to modify it; it can also be safely used with temporaries (such as `\"Hello\"s + \" World\"`) and is efficient as the temporary is not copied. (An optimization to use `std::move` when called with a `std::string` (only) r-value is a possiblilty here, however this would entail writing a second `explicit` constructor.)\n",
     "\n",
     "## Standard exceptions, try, throw and catch\n",
     "\n",
-    "Exceptions are a means of altering program flow (at run-time) and *propagating* error conditions from a callee (sub-)function to its caller function (potentially as far back as `main()`, thus bypassing the usual function return mechanism. Program flow is interrupted at the point where an exception is *thrown*, and resumes at the point the exception is *caught*, which is always within the scope of a caller function (again, possibly `main()`, the beginning of the function call stack). Any code designed to handle an exception being thrown is contained within a *try-block*; this is a block of code enclosed in curly braces immediately after the `try` keyword. This try-block **is** allowed to make function/method calls, implicitly enclosing these within the try-block scope. (Any exceptions thrown from functions declared `noexcept`, or thrown from outside of a try-block's scope will terminate the program.)\n",
+    "Exceptions are a means of altering program flow (at run-time) and *propagating* error conditions from a callee (sub-)function to its caller function (potentially as far back as `main()`, thus bypassing the usual function return mechanism). Program flow is interrupted at the point where an exception is *thrown*, and resumes at the point the exception is *caught*, which is always within the scope of a caller function (again, possibly `main()`, the beginning of the function call stack). Any code designed to handle an exception being thrown is contained within a *try-block*; this is a block of code enclosed in curly braces immediately after the `try` keyword. This try-block **is** allowed to make function/method calls, implicitly enclosing these within the try-block scope. (Any exceptions thrown from functions declared `noexcept`, or thrown from outside of a try-block's scope will terminate the program.)\n",
     "\n",
     "An exception is thrown by using the `throw` keyword, followed by the object to be thrown. (If no object is specified then `std::terminate` is called, as for `noexcept` functions.) Usually, you will want to throw an instance of the `std::exception` hierarchy, although **any** user-defined or built-in type can be thrown.\n",
     "\n",
@@ -302,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a02d7e9f",
+   "id": "affe5ae4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4cc6bb1",
+   "id": "28e02e9b",
    "metadata": {},
    "source": [
     "Some new features of C++ introduced by this program:\n",
@@ -373,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaf5addd",
+   "id": "e6b7c9e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82ad9d7f",
+   "id": "246831c3",
    "metadata": {},
    "source": [
     "A few new things to note about this program:\n",
@@ -443,7 +444,7 @@
     "\n",
     "* It works by throwing a `std::runtime_error` (which is derived from `std::exception`), throwing a plain `std::exception`, throwing an `int` or returning an `int`.\n",
     "\n",
-    "* There is no need for `break` statements within the `switch` as no `case:` conditions can fall through (except for `default:`, which never needs `break`).\n",
+    "* There is no need for `break` statements within the `switch` as no `case:` conditions can fall through (except for `default:`, which never needs `break` as it should be the final clause).\n",
     "\n",
     "* The order of the catch-blocks is significant, with ellipsis last and (derived class) `std::runtime_error` first.\n",
     "\n",
@@ -465,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12348a72",
+   "id": "e1703bd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42fb8b00",
+   "id": "aef7ae72",
    "metadata": {},
    "source": [
     "**Experiment:**\n",
@@ -508,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b011da3b",
+   "id": "3298cc6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b454a39c",
+   "id": "e581c54e",
    "metadata": {},
    "source": [
     "A few points to note about this program:\n",
@@ -581,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06968376",
+   "id": "7b730671",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e256eb76",
+   "id": "1faf56a3",
    "metadata": {},
    "source": [
     "A few points to note:\n",
@@ -628,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d87321e0",
+   "id": "01a46e6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e26f7de",
+   "id": "47f07bae",
    "metadata": {},
    "source": [
     "A couple of things to note about this program:\n",
@@ -678,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d60b7b5",
+   "id": "424050d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fbcd7ae",
+   "id": "eb56f5cb",
    "metadata": {},
    "source": [
     "A few things to note about this program:\n",
@@ -732,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e100a8e",
+   "id": "3b673333",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aebc5bd4",
+   "id": "05e3bd34",
    "metadata": {},
    "source": [
     "A few important things to note about this program:\n",
@@ -812,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "801b37df",
+   "id": "aa24757b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2a64032",
+   "id": "6bd795be",
    "metadata": {},
    "source": [
     "A few things to note about this program:\n",
@@ -876,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e424686e",
+   "id": "e70bcb05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62345cb7",
+   "id": "cd545911",
    "metadata": {},
    "source": [
     "A couple of things to note about this program:\n",
@@ -923,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d420e3c0",
+   "id": "2bcb0b82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ef14527",
+   "id": "2b513c1f",
    "metadata": {},
    "source": [
     "A few things to note about this program:\n",
@@ -976,7 +977,7 @@
     "\n",
     "* Then, the sub-scope exits, destroying `p2`, however the object it points to says alive becuase `p1` points to it.\n",
     "\n",
-    "* Finally, `main()` exits, destroying `p1` and `\"p2\"`. Thus `\"p1\"` and `\"p2\"` are destroyed in the **same** order in which they were initialized, unlike for `std::unique_ptr` where it would always be in reverse order.\n",
+    "* Finally, `main()` exits, destroying `p1` and `p2`. Thus `\"p1\"` and `\"p2\"` are destroyed in the **same** order in which they were initialized, unlike for `std::unique_ptr` where it would always be in reverse order.\n",
     "\n",
     "Any `std::shared_ptr` object can be passed by **value** to a function, implying a copy of the `std::shared_ptr` and a sharing of ownership. Also a container of `std::shared_ptr`s can share ownership with named `std::shared_ptr`s, or even another container of `std::shared_ptr`s.\n",
     "\n",
@@ -986,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eee4a28",
+   "id": "20ef7aa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1010,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c334d13",
+   "id": "1f1d2710",
    "metadata": {},
    "source": [
     "This code will probably compile without a warning being issued, and `Class` and `Pupil` objects can be created and made to point to each other. However, when the containers `AllClasses` and `AllPupils` are destroyed or go out of scope, this does not cause the destructors of the `Class` and `Pupil` objects to be called correctly; this is caused by the semantics being wrong as a `Class` **cannot** \"own\" its `Pupil`s if the `Pupil`s **also** \"own\" the `Class`. Luckily there is a third smart pointer type `std::weak_ptr`, a non-owning smart pointer which can be initialized from a `std::shared_ptr`. A `std::weak_ptr` cannot be derefenced directly, but has a member function `lock()` which returns a suitable `std::shared_ptr` (within the scope of the call to `lock()`) which **can** be dereferenced. The change to the code is simple (assuming that `Class` is desired to own its `Pupil`s, rather than the other way about), and is shown below:"
@@ -1018,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e34c5cb8",
+   "id": "84b31302",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f590a9e",
+   "id": "f3c694d4",
    "metadata": {},
    "source": [
     "The corrected sample code is replicated in the complete program shown below; lambdas have been shown (instead of `friend` or `static` member functions) as ways to create and manipulate the `Class` and `Pupil` types, thus the program has only two global `struct` definitions and a fairly large `main()` function:"
@@ -1039,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8149711b",
+   "id": "56916ee1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ac7e7a",
+   "id": "ba08f6c0",
    "metadata": {},
    "source": [
     "This is one of the larger programs we have seen, and covers much of the contents of this Chapter:\n",
@@ -1177,15 +1178,18 @@
     "\n",
     "* Change `Pupil` and `Class` to be `class`es instead of `struct`s, with `private:` data members. Hint: you will need to write some `public:` getters.\n",
     "\n",
-    "*All text and program code &copy;2019-2024 Richard Spencer, all rights reserved.*"
+    "*All text and program code &copy;2019-2025 Richard Spencer, all rights reserved.*"
    ]
   }
  ],
  "metadata": {
   "jupytext": {
-   "cell_metadata_filter": "-all",
-   "main_language": "python",
-   "notebook_metadata_filter": "-all"
+   "cell_metadata_filter": "-all"
+  },
+  "kernelspec": {
+   "display_name": "C++ 23",
+   "language": "c++",
+   "name": "cpp23"
   }
  },
  "nbformat": 4,
