--- a/jupyter-notebooks/02-variables-scopes-and-namespaces.ipynb
+++ b/jupyter-notebooks/02-variables-scopes-and-namespaces.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b692b1cf",
+   "id": "9b38d6e3",
    "metadata": {},
    "source": [
     "# Variables, Scopes and Namespaces\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d851450",
+   "id": "16f9abba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73fca9d5",
+   "id": "024c7429",
    "metadata": {},
    "source": [
     "Running this program produced the output:\n",
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1616ff9f",
+   "id": "32a37394",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92174bfd",
+   "id": "e84824c9",
    "metadata": {},
    "source": [
     "Running this program produces the output:\n",
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5faa40b6",
+   "id": "98fe410f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "718abfb1",
+   "id": "30d9af3e",
    "metadata": {},
    "source": [
     "It is important not to confuse a single value in curly braces with an initializer list containing one element when reading code like this; in practice here there is no ambiguity because if we had wanted to initialize an array of `int` a single element list we would have written `int c[] = {2.5,};` using a trailing comma inside the braces. Interestingly, the equals sign in uniform initialization is in fact **optional**, so we could have written `int c{2.5}` and `double d{1}`. Uniform initialization appears elsewhere in C++ so it is a good idea to become familiar with the syntax early on, and know the nuances of its behavior compared to using a time-honored C-style equals sign instead. In Modern C++, uniform initialization is probably considered better style, where you have the choice of the two.\n",
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3225d1b",
+   "id": "f70469d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,10 +224,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aee9a883",
+   "id": "e03153c3",
    "metadata": {},
    "source": [
-    "Program can be (re-)written without any use of `auto`, however you will often encounter it in modern code so you need to be able to recognize and understand its meaning. It is especially useful where the type in question is overly verbose, such as when using types related to generic classes. Notice from the example shown here the use of uniform initialization syntax with `auto`-assignment for the variable `k`; this usage can be expected to become more common.\n",
+    "Programs can be (re-)written without any use of `auto`, however preferring `auto` in Modern C++ is motivated primarily by correctness, performance, maintainability, and robustness, rather than just typing convenience. It is especially useful where the type in question is overly verbose, such as when using types related to generic classes, and also helps avoid accidental narrowing conversions or commitment to implementation-specific types. Notice from the example shown here the use of uniform initialization syntax with `auto`-assignment for the variable `k`; this usage can be expected to become more common.\n",
     "\n",
     "## Bool and byte\n",
     "\n",
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae2ba5e8",
+   "id": "a8ad02ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a637170",
+   "id": "aa3ffe22",
    "metadata": {},
    "source": [
     "The `byte` type, often referred to as `std::byte` as it is a type made available from within the Standard Library namespace (in order to avoid name clashes with existing code), designed to replace `unsigned char` where the variable (or array) contains (8-bit) binary data.\n",
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e316447",
+   "id": "c196c001",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef649e53",
+   "id": "e4ec3fa6",
    "metadata": {},
    "source": [
     "## Literal prefixes and suffixes\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9944300",
+   "id": "7833a588",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a4d93cb",
+   "id": "0a82bf1a",
    "metadata": {},
    "source": [
     "This syntax is **only** for numeric literals embedded within code, not for numbers read from the keyboard or a file using stream input.\n",
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5553ae2c",
+   "id": "327447b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2334996",
+   "id": "3b53737c",
    "metadata": {},
    "source": [
     "Note: this is **not** necessary for suffixes of the built-in types, being `F`, `f`, `U`, `u`, `L`, `l`, `LL` and `ll`.\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "904a714c",
+   "id": "780dede9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e882d34e",
+   "id": "1ef59be4",
    "metadata": {},
    "source": [
     "Running this program produces the output:\n",
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ec13200",
+   "id": "733b3887",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a36144d5",
+   "id": "2b304f79",
    "metadata": {},
    "source": [
     "**Experiment**\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06cb4ed8",
+   "id": "e7bf2933",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb6b791c",
+   "id": "cdd21b31",
    "metadata": {},
    "source": [
     "The fully qualified names of both variables defined are very similar, they are: `Wonderland::Animals::white_rabbit` and `Wonderland::Animals::mouse`. Notice that the definitions within the `namespace` keywords have **not** been indented; this is common practice because of the nature of the code (functions and class definitions) that can often appear within namespaces, which reads better unindented.\n",
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d021854",
+   "id": "62f4982e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f09a34e4",
+   "id": "5b758705",
    "metadata": {},
    "source": [
     "**Experiment**\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6a1d978",
+   "id": "fb509afd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbf5f8f1",
+   "id": "1f8c7c70",
    "metadata": {},
    "source": [
     "Notice that the named constants have been specified using upper case, which is a common convention.\n",
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25990617",
+   "id": "c1e2654d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9fd6e62",
+   "id": "57d838fc",
    "metadata": {},
    "source": [
     "**Experiment**\n",
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be965fe7",
+   "id": "30429eb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67fc3f83",
+   "id": "6a7c6116",
    "metadata": {},
    "source": [
     "It is also possible to explicitly (re-)specify the reference property on the assignee side, but attempting to change the value of a constant value through a non-`const` reference is not allowed:"
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cae9d6c6",
+   "id": "f21b3ca3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1735ce02",
+   "id": "da779dca",
    "metadata": {},
    "source": [
     "Of the above, only `b`, `e` and `h` are re-assignable.\n",
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53b6d322",
+   "id": "30795dfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fd7b42f",
+   "id": "593b3981",
    "metadata": {},
    "source": [
     "(Hint: this program is the first to require an additional header to `<print>`; you may need to add `-lm` to the compile command under Linux in order to link in the math library containing the `acos()` function.)\n",
